--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,12 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Italiana&display=swap");
+
 
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
 
 @layer base {
-  html {
-    font-family: "Poppins", "san-serif";
+  * {
+    font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
   }
 }
