feat: added our partner page and organizers page

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -7,7 +7,12 @@
   * {
     font-family: "Poppins", sans-serif;
     scroll-behavior: smooth;
+    
+    /* background-color: #1d232f; */
   }
+body{
+  
+} 
 
   .hidden-scrollbar::-webkit-scrollbar,
   .drawer-scrollbar::-webkit-scrollbar {
